--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,9 +24,13 @@
   font-size: bold;
 }
 #profile a{
-  margin-right: 10px;
+  margin-right: 15px;
 }
 #profile a > i {
-  font-size: 10pt;
+  font-size: 25pt;
   text-decoration: none;
+}
+#profile p{
+  padding: 10px;
+  color: #fff;
 }
