--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,12 @@
 
 footer {
   width: 100%;
-  height: 300px;
+  height: 250px;
   background: #000;
+  color: #FFF;
+  padding: 15px;
+}
+footer .social{
+  font-size: 40pt;
+  margin: 5px 10px 2px 10px;
 }
